--- a/E/Epic/Vail_Resort_Template/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -9,14 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
-        font-family: open-sans-condensed,sans-serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-      .MontserratSemibold{
+      .MontserratBlack{
         font-family: montserrat, sans-serif;
-        font-weight: 600;
+        font-weight: 900;
         font-style: normal;
       }
     </style>
@@ -51,7 +46,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text MontserratSemibold"
+      <div id="frameText1" class="text MontserratBlack"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -59,10 +54,10 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="frameText2" class="text MontserratSemibold"
+      <div id="frameText2" class="text MontserratBlack"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -70,10 +65,10 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="frameText3" class="text MontserratSemibold"
+      <div id="frameText3" class="text MontserratBlack"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -81,10 +76,10 @@
           width: 130px;
           height: 60px;
           font-size: 15px;
-          letter-spacing: 1.6px;
+          /* letter-spacing: 1.6px; */
           line-height: 1.3;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text MontserratBlack"
         data-text="ctaText"
         data-style="text-align:center;padding:0 8px 0px;"
         style="top: 545px;
@@ -93,16 +88,14 @@
           height: 28px;
           font-size: 13px;
           line-height: 20px;
-          letter-spacing: 1.1px;
-          border-radius: 15px;
+          /* letter-spacing: 1.1px; */
+          /* border-radius: 15px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
-      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
+      <div class="MontserratBlack">MontserratBlack</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
