--- a/E/Epic/Vail_Resort_Template/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -9,14 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .OpenSansCondensedBold {
-        font-family: open-sans-condensed,sans-serif;
-        font-weight: 700;
-        font-style: normal;
-      }
-      .MontserratSemibold{
+      .MontserratBlack{
         font-family: montserrat, sans-serif;
-        font-weight: 600;
+        font-weight: 900;
         font-style: normal;
       }
     </style>
@@ -51,55 +46,53 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratSemibold"
+      <div id="frameText1" class="text-left MontserratBlack"
         data-text="frameText1"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          /* letter-spacing: 1.1px; */
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratSemibold"
+      <div id="frameText2" class="text-left MontserratBlack"
         data-text="frameText2"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          /* letter-spacing: 1.1px; */
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratSemibold"
+      <div id="frameText3" class="text-left MontserratBlack"
         data-text="frameText3"
         style="top: 3px;
           left: 170px;
           width: 82px;
           height: 44px;
           font-size: 11px;
-          letter-spacing: 1.1px;
+          /* letter-spacing: 1.1px; */
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text OpenSansCondensedBold"
+      <div id="cta" class="text MontserratBlack"
         data-text="ctaText"
-        data-style="padding:0 6px 0px;"
+        data-style="padding:1px 6px 0px;"
         style="top: 17px;
           left: 256px;
           width: 55px;
           height: 18px;
           font-size: 9px;
           line-height: 10px;
-          letter-spacing: 0.5px;
-          border-radius: 12px;
+          /* letter-spacing: 0.5px; */
+          /* border-radius: 12px; */
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratSemibold">MontserratSemibold</div>
-      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
-      <div class="OpenSansCondensedBold">OpenSansCondensedBold</div>
+      <div class="MontserratBlack">MontserratBlack</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
