--- a/E/Epic/Vail_Resort_Template/ads/728x90/CrestedButte/728x90_CrestedButte.htm
+++ b/E/Epic/Vail_Resort_Template/ads/728x90/CrestedButte/728x90_CrestedButte.htm
@@ -53,7 +53,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left GibsonSemibold"
@@ -63,7 +63,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left GibsonSemibold"
@@ -73,20 +73,20 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0.05em;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text GibsonSemibold"
         data-text="ctaText"
-        data-style="padding:0 10px 0px;"
+        data-style="padding:1px 10px 0px;"
         style="top: 29px;
           left: 623px;
           width: 94px;
           height: 30px;
           font-size: 12px;
           line-height: 20px;
-          letter-spacing: 1.1px;
-          border-radius: 12px;
+          letter-spacing: 0.08em;
+          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
