--- a/E/Epic/Vail_Resort_Template/ads/300x600/StevensPass/300x600_StevensPass.htm
+++ b/E/Epic/Vail_Resort_Template/ads/300x600/StevensPass/300x600_StevensPass.htm
@@ -9,9 +9,14 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .DINCondensedRegular{
-        font-family: din-condensed,sans-serif;
+      .GibsonRegular{
+        font-family: canada-type-gibson,sans-serif;
         font-weight: 400;
+        font-style: normal;
+      }
+      .GibsonBold{
+        font-family: canada-type-gibson,sans-serif;
+        font-weight: 700;
         font-style: normal;
       }
     </style>
@@ -22,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #001722;
+        color: #0564a3;
         background-color: #fff;
       }
       .frame {
@@ -46,7 +51,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text DINCondensedRegular"
+      <div id="frameText1" class="text GibsonBold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 457px;
@@ -54,10 +59,10 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text DINCondensedRegular"
+      <div id="frameText2" class="text GibsonBold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 457px;
@@ -65,10 +70,10 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text DINCondensedRegular"
+      <div id="frameText3" class="text GibsonBold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 457px;
@@ -76,26 +81,27 @@
           width: 260px;
           height: 60px;
           font-size: 25px;
-          letter-spacing: 1.9px;
+          letter-spacing: 0.05em;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text DINCondensedRegular"
+      <div id="cta" class="text GibsonRegular"
         data-text="ctaText"
         data-style="padding:2px 12px 0px;"
         style="top: 542px;
           left: 97px;
           width: 108px;
           height: 34px;
-          font-size: 17px;
+          font-size: 16px;
           line-height: 20px;
-          letter-spacing: 2.2px;
-          /*border-radius: 15px;*/
+          letter-spacing: 0.05em;
+          border-radius: 20px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="DINCondensedRegular">DINCondensedRegular</div>
+      <div class="GibsonRegular">GibsonRegular</div>
+      <div class="GibsonBold">GibsonBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -130,7 +136,7 @@
           staticData: {
             // ref: 'ref.png'
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#0264A3^#027dcc',
+            ctaBtnColor: '#0564a3^#0a7ac4',
           },
           beforeLoad: function(data){
             data.map(function(content){
